add option to specify optimizer by name

--- a/src/deepqmc/jax/conf/task/train.yaml
+++ b/src/deepqmc/jax/conf/task/train.yaml
@@ -2,8 +2,8 @@ defaults:
   - hamil: qc
   - ansatz: paulinet
   - sampler: decorr_langevin
-  - opt: kfac
 _target_: deepqmc.jax.app.train_from_factories
+opt: kfac
 steps: 1000
 sample_size: 1000
 clip_width: 1.0
