--- a/src/deepqmc/jax/conf/hamil/qc.yaml
+++ b/src/deepqmc/jax/conf/hamil/qc.yaml
@@ -1,4 +1,4 @@
 _target_: deepqmc.jax.hamil.MolecularHamiltonian
 mol:
-  _target_: deepqmc.jax.Molecule.from_name
+  _target_: deepqmc.jax.molecule.Molecule.from_name
   name: LiH
