--- a/src/deepqmc/data/systems.toml
+++ b/src/deepqmc/data/systems.toml
@@ -109,12 +109,43 @@ unit = 'angstrom'
 
 [NH3]
 coords = [
-    [ 0.0,      0.0,      0.116488],
-    [ 0.0,      0.93973, -0.27181],
-    [ 0.81383, -0.46986, -0.27181],
+    [0.0, 0.0, 0.116488],
+    [0.0, 0.93973, -0.27181],
+    [0.81383, -0.46986, -0.27181],
     [-0.81383, -0.46986, -0.27181],
 ]
 charges = [7, 1, 1, 1]
+charge = 0
+spin = 0
+unit = 'angstrom'
+
+[CH4]
+coords = [
+    [0.0, 0.0, 0.0],
+    [0.62912, 0.62912, 0.62912],
+    [-0.62912, -0.62912, 0.62912],
+    [0.62912, -0.62912, -0.62912],
+    [-0.62912, 0.62912, -0.62912],
+]
+charges = [6, 1, 1, 1, 1]
+charge = 0
+spin = 0
+unit = 'angstrom'
+
+[H10]
+coords = [
+    [0.0, 0.0, 0.0],
+    [0.95305, 0.0, 0.0],
+    [1.90610, 0.0, 0.0],
+    [2.85914, 0.0, 0.0],
+    [3.81219, 0.0, 0.0],
+    [4.76524, 0.0, 0.0],
+    [5.71829, 0.0, 0.0],
+    [6.67134, 0.0, 0.0],
+    [7.62439, 0.0, 0.0],
+    [8.57743, 0.0, 0.0],
+]
+charges = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
 charge = 0
 spin = 0
 unit = 'angstrom'
