[WIP] adapt config files to new directory

--- a/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/edge_features.yaml
+++ b/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/edge_features.yaml
@@ -1,4 +1,4 @@
 defaults:
   - radial_basis_factory: bessel
-_target_: deepqmc.jax.gnn.edge_features.EdgeFeatures
+_target_: deepqmc.gnn.edge_features.EdgeFeatures
 _partial_: true
