--- a/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/bessel.yaml
+++ b/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/bessel.yaml
@@ -1,4 +1,4 @@
 defaults:
   - envelope_factory: polynomial
-_target_: deepqmc.jax.gnn.edge_features.BesselBasis
+_target_: deepqmc.gnn.edge_features.BesselBasis
 _partial_: true
