--- a/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/envelope_factory/polynomial.yaml
+++ b/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/envelope_factory/polynomial.yaml
@@ -1,4 +1,4 @@
-_target_: deepqmc.jax.gnn.edge_features.PolynomialEnvelope
+_target_: deepqmc.gnn.edge_features.PolynomialEnvelope
 _partial_: true
 n0: 0
 n1: 2
