--- a/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/gaussian.yaml
+++ b/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/gaussian.yaml
@@ -1,3 +1,3 @@
-_target_: deepqmc.jax.gnn.edge_features.GaussianBasis
+_target_: deepqmc.gnn.edge_features.GaussianBasis
 _partial_: true
 offset: true
