--- a/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/combined.yaml
+++ b/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/combined.yaml
@@ -1,19 +1,19 @@
-_target_: deepqmc.jax.gnn.edge_features.CombinedRadialBases
+_target_: deepqmc.gnn.edge_features.CombinedRadialBases
 _partial_: true
 factories:
-- _target_: deepqmc.jax.gnn.edge_features.GaussianBasis
+- _target_: deepqmc.gnn.edge_features.GaussianBasis
   _partial_: true
   offset: true
   envelope_factory:
-    _target_: deepqmc.jax.gnn.edge_features.PolynomialEnvelope
+    _target_: deepqmc.gnn.edge_features.PolynomialEnvelope
     _partial_: true
     n0: 0
     n1: 2
-- _target_: deepqmc.jax.gnn.edge_features.DistancePowersBasis
+- _target_: deepqmc.gnn.edge_features.DistancePowersBasis
   _partial_: true
   powers: [1]
   envelope_factory:
-    _target_: deepqmc.jax.gnn.edge_features.PolynomialEnvelope
+    _target_: deepqmc.gnn.edge_features.PolynomialEnvelope
     _partial_: true
     n0: 0
     n1: 2
