--- a/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/combined_identity.yaml
+++ b/src/deepqmc/conf/ansatz/omni_factory/gnn_factory/edge_feat_factory/radial_basis_factory/combined_identity.yaml
@@ -1,10 +1,10 @@
-_target_: deepqmc.jax.gnn.edge_features.CombinedRadialBases
+_target_: deepqmc.gnn.edge_features.CombinedRadialBases
 _partial_: true
 factories:
-- _target_: deepqmc.jax.gnn.edge_features.GaussianBasis
+- _target_: deepqmc.gnn.edge_features.GaussianBasis
   _partial_: true
   offset: true
-- _target_: deepqmc.jax.gnn.edge_features.DistancePowersBasis
+- _target_: deepqmc.gnn.edge_features.DistancePowersBasis
   _partial_: true
   powers: [1]
 n_rbfs: [31, 1]
