--- a/src/deepqmc/conf/task/sampler/resampled_decorr_metropolis.yaml
+++ b/src/deepqmc/conf/task/sampler/resampled_decorr_metropolis.yaml
@@ -1,8 +1,8 @@
-- _target_: deepqmc.jax.sampling.ResampledSampler
+- _target_: deepqmc.sampling.ResampledSampler
   frequency: 5
-- _target_: deepqmc.jax.sampling.DecorrSampler
+- _target_: deepqmc.sampling.DecorrSampler
   length: 20
-- _target_: deepqmc.jax.sampling.MetropolisSampler
+- _target_: deepqmc.sampling.MetropolisSampler
   _partial_: true
   tau: 1.0
   max_age: 20
