--- a/src/deepqmc/jax/conf/hamil/mol/LiH.yaml
+++ b/src/deepqmc/jax/conf/hamil/mol/LiH.yaml
@@ -1,4 +1,5 @@
-coords: [[0.0, 0.0, 0.0], [0.0, 0.0, 3.0141129518]]
-charges: [1, 3]
+coords: [[0.0, 0.0, 0.0], [1.595, 0.0, 0.0]]
+charges: [3, 1]
 charge: 0
 spin: 0
+unit: angstrom
