add custom help message for cli

--- a/src/deepqmc/jax/conf/config.yaml
+++ b/src/deepqmc/jax/conf/config.yaml
@@ -5,6 +5,7 @@ defaults:
   - ansatz: paulinet
   - hamil: qc
   - override hydra/job_logging: custom
+  - override hydra/help: custom
 hydra:
   job:
     name: deepqmc
