--- a/src/deepqmc/conf/hydra/help/custom.yaml
+++ b/src/deepqmc/conf/hydra/help/custom.yaml
@@ -17,7 +17,8 @@ template: |-
 
      - train:      Trains the ansatz with variational Monte Carlo.
      - evaluate:   Evaluates the total energy of an ansatz via Monte Carlo sampling.
-     - restrart:   Restarts/continues the training from a stored training checkpoint.
+     - restart:    Restarts/continues the training from a stored training checkpoint.
+     - defaults:   Collects the default hyperparameters for the main DeepQMC functions.
 
        Further tasks can be defined in the hydra config files (deepqmc/src/deepqmc/conf).
 
@@ -26,6 +27,7 @@ template: |-
      - train:     deepqmc.app hydra.run.dir=workdir hamil.mol.name=LiH task.steps=5000
      - evaluate:  deepqmc.app task=evaluate task.restdir=workdir task.steps=500
      - restart:   deepqmc.app task=restart task.restdir=workdir task.steps=10000
+     - defaults:  deepqmc.app task=defaults
 
        Hyperparameters can be specified according to the standard Hydra syntax
     
