--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     'kfac-jax',
     'pyscf',
     'tensorboard',
-    'yaml',
+    'pyyaml',
     'tqdm',
     'uncertainties',
 ]
