--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,10 @@ classifiers = [
     'Topic :: Scientific/Engineering :: Artificial Intelligence',
     'Topic :: Scientific/Engineering :: Chemistry',
     'Topic :: Scientific/Engineering :: Physics',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10'
 ]
-requires-python = ">3.9"
+requires-python = ">=3.9"
 dependencies = [
     'dm-haiku',
     'e3nn-jax',
