add jax-dataclasses as a dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     'hydra-core',
     'jax[cuda]',
     'jaxtyping',
+    'jax-dataclasses',
     'kfac-jax',
     'pyscf',
     'tensorboard',
