unpin flake8, issue with flake8-quotes is resolved

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dev = [
     'pytest',
     'pytest-regressions',
     'black',
-    'flake8<6.0.0',  # flake8 6.0.0 is currently incompatible with flake8-quotes
+    'flake8',
     'flake8-bugbear',
     'flake8-comprehensions',
     'flake8-quotes',
