--- a/src/deepqmc/conf/hamil/mol/B2.yaml
+++ b/src/deepqmc/conf/hamil/mol/B2.yaml
@@ -1,5 +1,6 @@
-coords: [[-0.7951, 0.0, 0.0], [0.7951, 0.0, 0.0]]
 charges: [5, 5]
 charge: 0
 spin: 2
-unit: angstrom
+data:
+  coords: [[-0.7951, 0.0, 0.0], [0.7951, 0.0, 0.0]]
+  unit: angstrom
