--- a/src/deepqmc/conf/hamil/mol/Be2.yaml
+++ b/src/deepqmc/conf/hamil/mol/Be2.yaml
@@ -1,5 +1,6 @@
-coords: [[-1.23, 0.0, 0.0], [1.23, 0.0, 0.0]]
 charges: [4, 4]
 charge: 0
 spin: 0
-unit: angstrom
+data:
+  coords: [[-1.23, 0.0, 0.0], [1.23, 0.0, 0.0]]
+  unit: angstrom
