--- a/src/deepqmc/conf/hamil/mol/C2.yaml
+++ b/src/deepqmc/conf/hamil/mol/C2.yaml
@@ -1,5 +1,6 @@
-coords: [[-0.621265, 0.0, 0.0], [0.621265, 0.0, 0.0]]
 charges: [6, 6]
 charge: 0
 spin: 0
-unit: angstrom
+data:
+  coords: [[-0.621265, 0.0, 0.0], [0.621265, 0.0, 0.0]]
+  unit: angstrom
