--- a/src/deepqmc/conf/hamil/mol/H2+.yaml
+++ b/src/deepqmc/conf/hamil/mol/H2+.yaml
@@ -1,5 +1,6 @@
-coords: [[-0.52918, 0.0, 0.0], [0.52918, 0.0, 0.0]]
 charges: [1, 1]
 charge: 1
 spin: 1
-unit: angstrom
+data:
+  coords: [[-0.52918, 0.0, 0.0], [0.52918, 0.0, 0.0]]
+  unit: angstrom
