--- a/src/deepqmc/conf/hamil/mol/H2.yaml
+++ b/src/deepqmc/conf/hamil/mol/H2.yaml
@@ -1,5 +1,6 @@
-coords: [[0.0, 0.0, 0.0], [0.742, 0.0, 0.0]]
 charges: [1, 1]
 charge: 0
 spin: 0
-unit: angstrom
+data:
+  coords: [[0.0, 0.0, 0.0], [0.742, 0.0, 0.0]]
+  unit: angstrom
