--- a/src/deepqmc/conf/hamil/mol/Li2.yaml
+++ b/src/deepqmc/conf/hamil/mol/Li2.yaml
@@ -1,5 +1,6 @@
-coords: [[-1.3364, 0.0, 0.0], [1.3364, 0.0, 0.0]]
 charges: [3, 3]
 charge: 0
 spin: 0
-unit: angstrom
+data:
+  coords: [[-1.3364, 0.0, 0.0], [1.3364, 0.0, 0.0]]
+  unit: angstrom
