--- a/src/deepqmc/conf/hamil/mol/N2.yaml
+++ b/src/deepqmc/conf/hamil/mol/N2.yaml
@@ -1,5 +1,6 @@
-coords: [[-2.13534, 0.0, 0.0], [2.13534, 0.0, 0.0]]
 charges: [7, 7]
 charge: 0
 spin: 0
-unit: angstrom
+data:
+  coords: [[-2.13534, 0.0, 0.0], [2.13534, 0.0, 0.0]]
+  unit: angstrom
