--- a/src/deepqmc/conf/hamil/mol/ScO.yaml
+++ b/src/deepqmc/conf/hamil/mol/ScO.yaml
@@ -1,8 +1,9 @@
-coords: [
-    [0.0, 0.0, 0.0],
-    [1.668, 0.0, 0.0],
-]
 charges: [21, 8]
 charge: 0
 spin: 1
-unit: angstrom
+data:
+  coords: [
+    [0.0, 0.0, 0.0],
+    [1.668, 0.0, 0.0],
+  ]
+  unit: angstrom
