--- a/src/deepqmc/conf/task/train.yaml
+++ b/src/deepqmc/conf/task/train.yaml
@@ -3,6 +3,7 @@ defaults:
 _target_: deepqmc.app.train_from_factories
 hamil: ${hamil}
 ansatz: ${ansatz}
+mols: ${hamil.mol}
 opt: kfac
 steps: 1000
 sample_size: 1000
