--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -28,7 +28,7 @@ omni_factory:
         _partial_: true
  
   gnn_factory:
-    _target_: deepqmc.gnn.schnet.SchNet
+    _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 4
     positional_electron_embeddings: true
