--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -3,6 +3,7 @@ _partial_: true
 n_interactions: 4
 positional_electron_embeddings: false
 atom_type_embeddings: false
+two_particle_stream_dim: 8
 edge_features:
   _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
   edge_features:
