--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -20,7 +20,9 @@ omni_factory:
     _target_: deepqmc.wf.nn_wave_function.omni.Jastrow
     _partial_: true
     sum_first: true
-    subnet_kwargs: 
+    subnet_factory:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
       hidden_layers: ['log', 3]
       last_linear: true
       bias: 'not_last'
@@ -30,7 +32,9 @@ omni_factory:
   backflow_factory:  
     _target_: deepqmc.wf.nn_wave_function.omni.Backflow
     _partial_: true
-    subnet_kwargs:
+    subnet_factory:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
       hidden_layers: ['log', 3]
       last_linear: true
       activation:
@@ -69,13 +73,24 @@ omni_factory:
     layer_factory:
       _target_: deepqmc.gnn.electron_gnn.ElectronGNNLayer
       _partial_: true
-      subnet_kwargs:
+      subnet_factory:
+        _target_: deepqmc.hkext.MLP
+        _partial_: true
         hidden_layers: ['log', 1]
         last_linear: false
         activation: 
           _target_: jax.numpy.tanh
           _partial_: true
-      subnet_kwargs_by_lbl: null
+      subnet_factory_by_lbl:
+        w:
+          _target_: deepqmc.hkext.MLP
+          _partial_: true
+          bias: false
+          hidden_layers: ['log', 1]
+          last_linear: false
+          activation: 
+            _target_: jax.numpy.tanh
+            _partial_: true
       residual: true
       convolution: true
       deep_features: false
