--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -43,13 +43,32 @@ omni_factory:
     positional_electron_embeddings: false
     atom_type_embeddings: false
     two_particle_stream_dim: 64
+    edge_types:
+    - same
+    - anti
+    - ne
     edge_features:
-      _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-      edge_features:
-      - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-        powers: [1]
-      - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
-    layer_kwargs:
+      ne:
+        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+        edge_features:
+        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+          powers: [1]
+        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+      same:
+        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+        edge_features:
+        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+          powers: [1]
+        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+      anti:
+        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+        edge_features:
+        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+          powers: [1]
+        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+    layer_factory:
+      _target_: deepqmc.gnn.electron_gnn.ElectronGNNLayer
+      _partial_: true
       subnet_kwargs:
         hidden_layers: ['log', 3]
         last_linear: false
