--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -24,8 +24,12 @@ omni_factory:
       _target_: deepqmc.hkext.MLP
       _partial_: true
       hidden_layers: ['log', 1]
-      last_linear: true
       bias: false
+      last_linear: true
+      activation:
+        _target_: deepqmc.hkext.ssp
+        _partial_: true
+      w_init: deeperwin
   gnn_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
@@ -57,22 +61,23 @@ omni_factory:
         _target_: deepqmc.hkext.MLP
         _partial_: true
         hidden_layers: ['log', 1]
-        last_linear: false
         bias: true
+        last_linear: false
         activation:
           _target_: jax.numpy.tanh
           _partial_: true
+        w_init: deeperwin
       subnet_factory_by_lbl:
         w:
           _target_: deepqmc.hkext.MLP
           _partial_: true
-          bias: false
           hidden_layers: ['log', 1]
+          bias: false
           last_linear: false
-          bias: true
           activation:
             _target_: jax.numpy.tanh
             _partial_: true
+          w_init: deeperwin
       residual: true
       convolution: true
       deep_features: true
