--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -20,10 +20,16 @@ omni_factory:
   backflow_factory:
     _target_: deepqmc.wf.nn_wave_function.omni.Backflow
     _partial_: true
-    subnet_kwargs:
+    subnet_factory:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
       hidden_layers: ['log', 1]
-      last_linear: true
       bias: false
+      last_linear: true
+      activation:
+        _target_: deepqmc.hkext.ssp
+        _partial_: true
+      w_init: deeperwin
   gnn_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
@@ -51,14 +57,27 @@ omni_factory:
     layer_factory:
       _target_: deepqmc.gnn.electron_gnn.ElectronGNNLayer
       _partial_: true
-      subnet_kwargs:
+      subnet_factory:
+        _target_: deepqmc.hkext.MLP
+        _partial_: true
         hidden_layers: ['log', 1]
-        last_linear: false
         bias: true
-        activation: 
+        last_linear: false
+        activation:
           _target_: jax.numpy.tanh
           _partial_: true
-      subnet_kwargs_by_lbl: null
+        w_init: deeperwin
+      subnet_factory_by_lbl:
+        w:
+          _target_: deepqmc.hkext.MLP
+          _partial_: true
+          hidden_layers: ['log', 1]
+          bias: false
+          last_linear: false
+          activation:
+            _target_: jax.numpy.tanh
+            _partial_: true
+          w_init: deeperwin
       residual: true
       convolution: true
       deep_features: true
