--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -20,13 +20,16 @@ omni_factory:
   backflow_factory:  
     _target_: deepqmc.wf.nn_wave_function.omni.Backflow
     _partial_: true
-    subnet_kwargs:
+    subnet_factory:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
       hidden_layers: ['log', 1]
+      bias: true
       last_linear: true
-      activation: 
+      activation:
         _target_: deepqmc.hkext.ssp
         _partial_: true
- 
+      w_init: default
   gnn_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
@@ -60,13 +63,27 @@ omni_factory:
     layer_factory:
       _target_: deepqmc.gnn.electron_gnn.ElectronGNNLayer
       _partial_: true
-      subnet_kwargs:
+      subnet_factory:
+        _target_: deepqmc.hkext.MLP
+        _partial_: true
         hidden_layers: ['log', 1]
+        bias: true
         last_linear: false
-        activation: 
+        activation:
           _target_: jax.numpy.tanh
           _partial_: true
-      subnet_kwargs_by_lbl: null
+        w_init: default
+      subnet_factory_by_lbl:
+        w:
+          _target_: deepqmc.hkext.MLP
+          _partial_: true
+          hidden_layers: ['log', 1]
+          bias: false
+          last_linear: false
+          activation:
+            _target_: jax.numpy.tanh
+            _partial_: true
+          w_init: default
       residual: true
       convolution: false
       deep_features: true
