--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -20,22 +20,29 @@ omni_factory:
     _target_: deepqmc.wf.nn_wave_function.omni.Jastrow
     _partial_: true
     sum_first: true
-    subnet_kwargs: 
+    subnet_factory:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
       hidden_layers: ['log', 3]
-      last_linear: true
       bias: 'not_last'
+      last_linear: true
       activation: 
         _target_: deepqmc.hkext.ssp
         _partial_: true
+      w_init: default
   backflow_factory:  
     _target_: deepqmc.wf.nn_wave_function.omni.Backflow
     _partial_: true
-    subnet_kwargs:
+    subnet_factory:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
       hidden_layers: ['log', 3]
+      bias: true
       last_linear: true
       activation:
         _target_: deepqmc.hkext.ssp
         _partial_: true
+      w_init: default
   gnn_factory:
     _target_: deepqmc.gnn.electron_gnn.ElectronGNN
     _partial_: true
@@ -69,13 +76,27 @@ omni_factory:
     layer_factory:
       _target_: deepqmc.gnn.electron_gnn.ElectronGNNLayer
       _partial_: true
-      subnet_kwargs:
+      subnet_factory:
+        _target_: deepqmc.hkext.MLP
+        _partial_: true
         hidden_layers: ['log', 1]
+        bias: true
         last_linear: false
         activation: 
           _target_: jax.numpy.tanh
           _partial_: true
-      subnet_kwargs_by_lbl: null
+        w_init: default
+      subnet_factory_by_lbl:
+        w:
+          _target_: deepqmc.hkext.MLP
+          _partial_: true
+          hidden_layers: ['log', 1]
+          bias: false
+          last_linear: false
+          activation: 
+            _target_: jax.numpy.tanh
+            _partial_: true
+          w_init: default
       residual: true
       convolution: true
       deep_features: false
