--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -30,13 +30,27 @@ edge_features:
 layer_factory:
   _target_: deepqmc.gnn.electron_gnn.ElectronGNNLayer
   _partial_: true
-  subnet_kwargs:
+  subnet_factory:
+    _target_: deepqmc.hkext.MLP
+    _partial_: true
     hidden_layers: ['log', 3]
+    bias: true
     last_linear: false
     activation: 
       _target_: jax.numpy.tanh
       _partial_: true
-  subnet_kwargs_by_lbl: null
+    w_init: default
+  subnet_factory_by_lbl:
+    w:
+      _target_: deepqmc.hkext.MLP
+      _partial_: true
+      hidden_layers: ['log', 3]
+      bias: false
+      last_linear: false
+      activation: 
+        _target_: jax.numpy.tanh
+        _partial_: true
+      w_init: default
   residual: true
   convolution: true
   deep_features: false
