--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     'jax[cuda]',
     'jaxtyping',
     'jax-dataclasses',
-    'kfac-jax<0.0.5',
+    'kfac-jax',
     'optax',
     'pyscf',
     'tensorboard',
