--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -4,6 +4,7 @@ envelope:
   _target_: deepqmc.wf.nn_wave_function.env.ExponentialEnvelopes
   _partial_: true
   isotropic: true
+  per_shell: true
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
