--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -99,7 +99,9 @@ omni_factory:
             _target_: jax.numpy.tanh
             _partial_: true
           w_init: default
-      residual: true
+      residual:
+        _target_: deepqmc.hkext.ResidualConnection
+        normalize: false
       convolution: true
       deep_features: false
       update_rule: featurewise
