set cpu version of jax in pyproject toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     'dm-haiku',
     'h5py',
     'hydra-core',
-    'jax[cuda]',
+    'jax',
     'jaxtyping',
     'jax-dataclasses',
     'kfac-jax',
