--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -14,7 +14,13 @@ full_determinant: false
 cusp_electrons: true
 cusp_alpha: 10.0
 backflow_transform: mult
-conf_coeff: false
+conf_coeff:
+  _target_: haiku.Linear
+  _partial_: true
+  with_bias: false
+  w_init:
+    _target_: jax.numpy.ones
+    _partial_: true
 omni_factory:
   _target_: deepqmc.wf.nn_wave_function.omni.OmniNet
   _partial_: true
