implement spin unrestricted envelopes

--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -6,6 +6,7 @@ envelope:
   isotropic: true
   per_shell: false
   per_orbital_exponent: true
+  spin_restricted: false
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
