--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -6,6 +6,7 @@ envelope:
   isotropic: true
   per_shell: true
   per_orbital_exponent: false
+  spin_restricted: true
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
