--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -10,6 +10,7 @@ envelope:
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
+  mult_act: '${eval:"lambda x: 1 + 2 * jax.numpy.tanh(x / 4)"}'
 n_determinants: 2
 full_determinant: false
 cusp_electrons: true
@@ -114,7 +115,7 @@ omni_factory:
       deep_features: false
       update_rule: featurewise
       update_features: 
-        - same
-        - anti
-        - ne
+        - edge_same
+        - edge_anti
+        - edge_ne
   
