--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -58,7 +58,7 @@ layer_factory:
   deep_features: false
   update_rule: featurewise
   update_features: 
-    - same
-    - anti
-    - ne
+    - edge_same
+    - edge_anti
+    - edge_ne
 
