temporarily restrict jax<0.4.11 (#126)
* temporarily restrict jax<0.4.11

* restrict jaxlib<0.4.11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     'dm-haiku',
     'h5py',
     'hydra-core',
-    'jax',
+    'jax<0.4.11',
+    'jaxlib<0.4.11',
     'jaxtyping',
     'jax-dataclasses',
     'kfac-jax',
