--- a/doc/default.yaml
+++ b/doc/default.yaml
@@ -55,7 +55,13 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 3
-    positional_electron_embeddings: true
+    positional_electron_embeddings:
+      ne:
+        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+        edge_features:
+        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+          powers: [1]
+        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
     atom_type_embeddings: true
     two_particle_stream_dim: 32
     edge_types:
@@ -69,12 +75,6 @@ omni_factory:
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
       anti:
-        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
-        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-          powers: [1]
-        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
-      ne:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
         edge_features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
