--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -45,7 +45,13 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 4
-    positional_electron_embeddings: true
+    positional_electron_embeddings:
+      ne:
+        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+        edge_features:
+        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+          powers: [1]
+        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
     two_particle_stream_dim: 32
     nuclei_embedding:
       _target_: deepqmc.gnn.electron_gnn.NucleiEmbedding
@@ -96,6 +102,6 @@ omni_factory:
         - residual
         - node_up
         - node_down
-        - edge_ee
-        - edge_ne
+        - convolution_ee
+        - convolution_ne
       w_for_ne: false
