--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -58,7 +58,13 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 3
-    positional_electron_embeddings: true
+    positional_electron_embeddings:
+      ne:
+        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+        edge_features:
+        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+          powers: [1]
+        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
     nuclei_embedding: null
     two_particle_stream_dim: 32
     self_interaction: false
@@ -73,12 +79,6 @@ omni_factory:
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
       anti:
-        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
-        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-          powers: [1]
-        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
-      ne:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
         edge_features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
